# nawigacja-wngig

./: .gitignore  README.md  app.py  model_budynku.gpkg  package.json  pyproject.toml
static/: floorplan.geojson  floorplan_0.geojson  model_budynku.gpkg
static/css/: style.css
static/js/: app.js
templates/: index.html
