[project]
name = "nawigacja"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = ["flask (>=3.1.2,<4.0.0)", "flask-cors (>=6.0.1,<7.0.0)", "psycopg2-binary (>=2.9.11,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,"]
build-backend = "poetry.core.masonry.api"
